--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.APPENDER_OUT.layout=org.apache.log4j.PatternLayout
 log4j.appender.APPENDER_OUT.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 #APPENDER_FILE
 log4j.appender.APPENDER_FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.APPENDER_FILE.File=mioLog.log
+log4j.appender.APPENDER_FILE.File=Zkewed_error_logger.log
 log4j.appender.APPENDER_FILE.MaxFileSize=100KB
 log4j.appender.APPENDER_FILE.MaxBackupIndex=1
 log4j.appender.APPENDER_FILE.layout=org.apache.log4j.PatternLayout
