--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,6 +55,7 @@ file.reference.okio-1.13.0.jar=okio-1.13.0.jar
 file.reference.restfb-2.4.0.jar=restfb-2.4.0.jar
 file.reference.slf4j-api-1.6.1.jar=lib/slf4j-api-1.6.1.jar
 file.reference.sqljdbc42.jar=sqljdbc42.jar
+file.reference.swingx-core-1.6.2.jar=swingx-core-1.6.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -83,7 +84,8 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.6.jar}:\
     ${file.reference.okhttp-3.9.1.jar}:\
     ${file.reference.okio-1.13.0.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.swingx-core-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -108,7 +110,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=zkewed.facebookpagescraper.views.FacebookLogin
+main.class=zkewed.facebookpagescraper.views.test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
